--- a/web/resourses/styles/main.css
+++ b/web/resourses/styles/main.css
@@ -105,7 +105,7 @@ iframe {
     align-items: center;
     padding: 15px;
     background: #9053c7;
-    background: -webkit-linear-gradient(-110deg, #45CEF7, #45f79e);
+    background: -webkit-linear-gradient(-110deg, #45CEF7, #45F79E);
     background: -o-linear-gradient(-110deg, #45CEF7, #45F79E);
     background: -moz-linear-gradient(-110deg, #45CEF7, #45F79E);
     background: linear-gradient(-110deg, #45CEF7, #45F79E);
@@ -143,7 +143,15 @@ iframe {
 .loginForm {
     width: 290px;
 }
-
+.errorMessage-title {
+    font-family: Poppins-Bold;
+    font-size: 30px;
+    color: #ff0000;
+    text-align: center;
+    width: 100%;
+    display: block;
+    padding-bottom: 15px;
+}
 .loginForm-title {
     font-family: Poppins-Bold;
     font-size: 45px;
@@ -158,14 +166,14 @@ iframe {
 
 
 /*---------------------------------------------*/
-.wrap-input100 {
+.startPage-form-input{
     position: relative;
     width: 100%;
     z-index: 1;
     margin-bottom: 10px;
 }
 
-.input100 {
+.input {
     font-family: Poppins-Medium;
     font-size: 15px;
     line-height: 1.5;
@@ -176,7 +184,8 @@ iframe {
     background: #e6e6e6;
     height: 50px;
     border-radius: 25px;
-    padding: 0 30px 0 68px;
+    margin: 10px 0;
+    padding: 0 30px 0 30px;
 }
 
 
@@ -330,69 +339,3 @@ iframe {
 }
 
 
-/*------------------------------------------------------------------
-[ Alert validate ]*/
-
-.validate-input {
-    position: relative;
-}
-
-.alert-validate::before {
-    content: attr(data-validate);
-    position: absolute;
-    max-width: 70%;
-    background-color: white;
-    border: 1px solid #c80000;
-    border-radius: 13px;
-    padding: 4px 25px 4px 10px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    right: 8px;
-    pointer-events: none;
-
-    font-family: Poppins-Medium;
-    color: #c80000;
-    font-size: 13px;
-    line-height: 1.4;
-    text-align: left;
-
-    visibility: hidden;
-    opacity: 0;
-
-    -webkit-transition: opacity 0.4s;
-    -o-transition: opacity 0.4s;
-    -moz-transition: opacity 0.4s;
-    transition: opacity 0.4s;
-}
-
-.alert-validate::after {
-    content: "\f06a";
-    font-family: FontAwesome;
-    display: block;
-    position: absolute;
-    color: #c80000;
-    font-size: 15px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    right: 13px;
-}
-
-.alert-validate:hover:before {
-    visibility: visible;
-    opacity: 1;
-}
-
-@media (max-width: 992px) {
-    .alert-validate::before {
-        visibility: visible;
-        opacity: 1;
-    }
-}
