--- a/web/resourses/styles/main.css
+++ b/web/resourses/styles/main.css
@@ -4,13 +4,11 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
 body, html {
     height: 100%;
     font-family: Poppins-Regular, sans-serif;
 }
 
-/*---------------------------------------------*/
 a {
     font-family: Poppins-Regular;
     font-size: 14px;
@@ -81,7 +79,28 @@ iframe {
     border: none !important;
 }
 
-
+table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 15px;
+    border-collapse: collapse;
+    text-align: center;
+}
+th, td:first-child {
+    background: #0c10ee;
+    color: white;
+    padding: 10px 20px;
+}
+th, td {
+    border-style: solid;
+    border-width: 0 1px 1px 0;
+    border-color: white;
+}
+td {
+    background: #D8E6F3;
+}
+th:first-child, td:first-child {
+    text-align: left;
+}
 
 
 /*//////////////////////////////////////////////////////////////////
